Fixed logout and added refresh
