# auth-service/api.go
@@ -1,19 +1,14 @@
 package main
 
 import (
-	"crypto/rand"
-	"fmt"
 	"log"
-	"math/big"
 	"net/http"
 	"strconv"
-	"strings"
 	"time"
 
 	"github.com/alebik0/go-auth/auth-service/database"
-	userservice "github.com/alebik0/go-auth/auth-service/user-service"
+	"github.com/alebik0/go-auth/auth-service/jwt"
 	"github.com/gin-gonic/gin"
-	jwt "github.com/golang-jwt/jwt/v5"
 	"golang.org/x/crypto/bcrypt"
 )
 
@@ -39,6 +34,10 @@ type LoginResponse struct {
 	AccessToken string `json:"access_token"`
 }
 
+type RefreshResponse struct {
+	AccessToken string `json:"access_token"`
+}
+
 type APIError struct {
 	Error string `json:"error" example:"just a random internal error"`
 }
@@ -54,14 +53,16 @@ type APIError struct {
 // @Failure     500 {object} APIError "Internal server error"
 // @Router      /api/v1/auth/register [post]
 func (handler *Handler) register(context *gin.Context) {
-	log.Println("Register new user")
+	log.Printf("Register new user")
 
+	log.Printf("Parse body data")
 	var parameters RegisterRequest
 	if err := context.ShouldBindBodyWithJSON(&parameters); err != nil {
 		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
+	log.Printf("Check if login is unique")
 	_, err := handler.AuthAPI.ReadAuthByLogin(parameters.Login)
 	if err == nil {
 		context.JSON(http.StatusConflict, gin.H{"error": "Login is already taken"})
@@ -71,12 +72,14 @@ func (handler *Handler) register(context *gin.Context) {
 		return
 	}
 
+	log.Printf("Create new profile")
 	userData, err := handler.UserAPI.CreateUser(parameters.Login, "")
 	if err != nil {
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
+	log.Printf("Generate password hash")
 	passwordHash, err := bcrypt.GenerateFromPassword(
 		[]byte(parameters.Password),
 		bcrypt.DefaultCost,
@@ -86,24 +89,28 @@ func (handler *Handler) register(context *gin.Context) {
 		return
 	}
 
+	log.Printf("Create new auth")
 	_, err = handler.AuthAPI.CreateAuth(parameters.Login, string(passwordHash), userData.ID)
 	if err != nil {
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	accessToken, err := generateAccessToken(handler.hmacSecret, userData)
+	log.Printf("Generate access token")
+	accessToken, err := generateAccessToken(handler.hmacSecret, strconv.FormatInt(int64(userData.ID), 10))
 	if err != nil {
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
+	log.Printf("Generate refresh token")
 	refreshToken, err := generateRefreshToken()
 	if err != nil {
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
+	log.Printf("Generate refresh token")
 	err = handler.JwtAPI.Save(
 		context.Request.Context(),
 		refreshToken,
@@ -115,10 +122,7 @@ func (handler *Handler) register(context *gin.Context) {
 		return
 	}
 
-	registerResponse := RegisterResponse{
-		AccessToken: accessToken,
-	}
-
+	log.Printf("Return refresh and access tokens")
 	context.SetCookie(
 		"refresh_token",
 		refreshToken,
@@ -128,40 +132,7 @@ func (handler *Handler) register(context *gin.Context) {
 		true,
 		true,
 	)
-	context.IndentedJSON(http.StatusOK, registerResponse)
-}
-
-func generateAccessToken(hmacSecret []byte, userData userservice.UserData) (string, error) {
-	token := jwt.NewWithClaims(
-		jwt.SigningMethodHS256,
-		jwt.RegisteredClaims{
-			Issuer:   "auth-service",
-			Subject:  strconv.FormatInt(int64(userData.ID), 10),
-			Audience: []string{"USER"},
-			ExpiresAt: jwt.NewNumericDate(
-				time.Now().Add(15 * time.Minute),
-			),
-			NotBefore: jwt.NewNumericDate(time.Now()),
-			IssuedAt:  jwt.NewNumericDate(time.Now()),
-			ID:        "auth_" + strconv.FormatInt(int64(userData.ID), 10),
-		},
-	)
-
-	return token.SignedString(hmacSecret)
-}
-
-func generateRefreshToken() (string, error) {
-	token := make([]byte, 32)
-
-	for i := range token {
-		n, err := rand.Int(rand.Reader, big.NewInt(int64(len(alphabet))))
-		if err != nil {
-			return "", err
-		}
-		token[i] = alphabet[n.Int64()]
-	}
-
-	return string(token), nil
+	context.IndentedJSON(http.StatusOK, RegisterResponse{AccessToken: accessToken})
 }
 
 // @Summary     Login user
@@ -175,14 +146,16 @@ func generateRefreshToken() (string, error) {
 // @Failure     500 {object} APIError "Internal server error"
 // @Router      /api/v1/auth/login [post]
 func (handler *Handler) login(context *gin.Context) {
-	log.Println("Login user")
+	log.Printf("Login user")
 
+	log.Printf("Parse body data")
 	var parameters RegisterRequest
 	if err := context.ShouldBindBodyWithJSON(&parameters); err != nil {
 		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
+	log.Printf("Search auth by login %s", parameters.Login)
 	authData, err := handler.AuthAPI.ReadAuthByLogin(parameters.Login)
 	if err == database.ErrAuthNotFound {
 		context.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid login"})
@@ -192,30 +165,35 @@ func (handler *Handler) login(context *gin.Context) {
 		return
 	}
 
+	log.Printf("Check if password is valid %s", parameters.Login)
 	err = bcrypt.CompareHashAndPassword([]byte(authData.PasswordHash), []byte(parameters.Password))
 	if err != nil {
 		context.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid password"})
 		return
 	}
 
+	log.Printf("Search load user by profile id %d", authData.ProfileID)
 	userData, err := handler.UserAPI.ReadUser(authData.ProfileID)
 	if err != nil {
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	accessToken, err := generateAccessToken(handler.hmacSecret, userData)
+	log.Printf("Generate access token")
+	accessToken, err := generateAccessToken(handler.hmacSecret, strconv.FormatInt(int64(userData.ID), 10))
 	if err != nil {
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
+	log.Printf("Generate refresh token")
 	refreshToken, err := generateRefreshToken()
 	if err != nil {
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
+	log.Printf("Save refresh token")
 	err = handler.JwtAPI.Save(
 		context.Request.Context(),
 		refreshToken,
@@ -227,10 +205,7 @@ func (handler *Handler) login(context *gin.Context) {
 		return
 	}
 
-	registerResponse := RegisterResponse{
-		AccessToken: accessToken,
-	}
-
+	log.Printf("Return access and refresh tokens")
 	context.SetCookie(
 		"refresh_token",
 		refreshToken,
@@ -240,7 +215,7 @@ func (handler *Handler) login(context *gin.Context) {
 		true,
 		true,
 	)
-	context.IndentedJSON(http.StatusOK, registerResponse)
+	context.IndentedJSON(http.StatusOK, RegisterResponse{AccessToken: accessToken})
 }
 
 // @Summary     Logout user
@@ -248,53 +223,30 @@ func (handler *Handler) login(context *gin.Context) {
 // @Tags        Auth
 // @Accept      json
 // @Produce     json
-// @Failure     400 {object} APIError "Bad request"
 // @Failure     401 {object} APIError "Unauthorized"
 // @Failure     500 {object} APIError "Internal server error"
 // @Router      /api/v1/auth/logout [post]
 func (handler *Handler) logout(context *gin.Context) {
-	log.Println("Logout user")
+	log.Printf("Logout user")
 
-	const prefix = "Bearer "
-	accessToken := context.GetHeader("Authorization")
-	if !strings.HasPrefix(accessToken, prefix) {
-		context.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid JWT token: should start from Bearer"})
+	log.Printf("Load refresh_token cookies")
+	accessToken, err := context.Cookie("refresh_token")
+	if err == http.ErrNoCookie {
+		context.JSON(http.StatusUnauthorized, gin.H{"error": "No cookie provided"})
+		return
+	} else if err != nil {
+		context.JSON(http.StatusInternalServerError, gin.H{"error": "No cookie provided"})
 		return
 	}
-	accessToken = strings.TrimPrefix(accessToken, prefix)
 
-	var claims jwt.RegisteredClaims
-	_, err := jwt.ParseWithClaims(
-		accessToken,
-		&claims,
-		func(token *jwt.Token) (any, error) {
-			return handler.hmacSecret, nil
-		},
-		jwt.WithValidMethods([]string{jwt.SigningMethodHS256.Alg()}),
-	)
+	log.Printf("Revert refresh token")
+	err = handler.JwtAPI.Revert(context.Request.Context(), accessToken)
 	if err != nil {
-		context.JSON(http.StatusUnauthorized, gin.H{"error": fmt.Sprintf("Invalid JWT token: parse failure: %v", err)})
+		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	if time.Now().After(claims.ExpiresAt.Time) || time.Now().Before(claims.NotBefore.Time) {
-		context.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid JWT token: expired"})
-		return
-	}
-
-	userIDSubject := claims.Subject
-	// roles := claims.Audience
-
-	userID, err := strconv.Atoi(userIDSubject)
-	if err != nil {
-		context.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid JWT token: invalid Subject"})
-		return
-	}
-
-	log.Printf("User is logined: userID=%d", userID)
-
-	// TODO: remove refreshToken
-
+	log.Printf("Remove refresh token from cookies")
 	context.SetCookie(
 		"refresh_token",
 		"",
@@ -305,4 +257,55 @@ func (handler *Handler) logout(context *gin.Context) {
 		true,
 	)
 	context.IndentedJSON(http.StatusOK, "")
+}
+
+// @Summary     Refresh access token
+// @Description Generate new access token for user
+// @Tags        Auth
+// @Accept      json
+// @Produce     json
+// @Failure     401 {object} APIError "Unauthorized"
+// @Failure     500 {object} APIError "Internal server error"
+// @Router      /api/v1/auth/refresh [post]
+func (handler *Handler) refresh(context *gin.Context) {
+	log.Printf("Logout user")
+
+	log.Printf("Load refresh_token cookies")
+	refreshToken, err := context.Cookie("refresh_token")
+	if err == http.ErrNoCookie {
+		context.JSON(http.StatusUnauthorized, gin.H{"error": "No cookie provided"})
+		return
+	} else if err != nil {
+		context.JSON(http.StatusInternalServerError, gin.H{"error": "No cookie provided"})
+		return
+	}
+
+	log.Printf("Revert refresh token")
+	userID, err := handler.JwtAPI.Get(context.Request.Context(), refreshToken)
+	if err == jwt.ErrJwtNotFound {
+		context.SetCookie(
+			"refresh_token",
+			"",
+			-1,
+			"/api/v1/auth",
+			"",
+			true,
+			true,
+		)
+
+		context.JSON(http.StatusUnauthorized, gin.H{"error": "The cookie is out of date"})
+		return
+	} else if err != nil {
+		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	accessToken, err := generateAccessToken(handler.hmacSecret, userID)
+	if err != nil {
+		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	log.Printf("Remove refresh token from cookies")
+	context.IndentedJSON(http.StatusOK, RefreshResponse{AccessToken: accessToken})
 }
